# key_light_control

./: lights.py  pyproject.toml  toggle_key_light.sh
src/key_light_switch/: __main__.py  lifx.py
