[tool.poetry]
name = "key-light-control"
version = "0.1.0"
description = "A short script for connecting to a LIFX LED strip"
authors = ["djnrrd <djnrrd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
lifxlan = "^1.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
